<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:padding="16dp"
                    android:contentDescription="@string/back"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/note_detail"
                    android:layout_weight="1"
                    style="@style/TextAppearance.Material3.HeadlineMedium"/>
                <ImageView
                    android:id="@+id/ivDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_delete_24"
                    app:tint="@color/red"
                    android:padding="16dp"
                    android:contentDescription="@string/delete"/>
            </LinearLayout>
            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:padding="16dp"
                android:hint="@string/note_title"
                style="@style/TextAppearance.Material3.HeadlineSmall"/>
            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:padding="16dp"
                android:hint="@string/note_content"
                android:background="@null"
                android:inputType="textMultiLine"
                tools:text="as dasd asd as dasa sda sda sd asd asd asd a as dasd asd as dasa sda sda sdas dasd asd as dasa sda sda sd asd asd asd aas dasd asd as dasa sda sda sd asd asd asd aas dasd asd as dasa sda sda sd asd asd asd aas dasd asd as dasa sda sda sd asd asd asd aas dasd asd as dasa sda sda sd asd asd asd aas dasd asd as dasa sda sda sd asd asd asd a asd asd asd a "
                style="@style/TextAppearance.Material3.BodyMedium"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:layout_gravity="bottom"/>
</FrameLayout>